# EENX015

./: README.md
scan_loc/: CMakeLists.txt  package.xml
scan_loc/lib/: PhoComputerUUID__Release_1.2.2.lib  PhoLocalization_SDK__Release_1.2.2.lib  PhoXi_API_dynamic_msvc12_Release_1.2.7.lib  PhoXi_API_msvc12_Debug_1.2.14.lib  PhoXi_API_msvc12_Release_1.2.14.lib  PhoXi_API_msvc14_Debug_1.2.14.lib  PhoXi_API_msvc14_Release_1.2.14.lib
scan_loc/lib/T-fittings/: model-T-fitting.ply
scan_loc/msg/: TransformMatrix.msg
scan_loc/src/: SimpleLocate.cpp
scan_loc/srv/: GetTransformMatrix.srv
scripts/: movetest.py  offline.py  offline_marker.py  pick_and_place.cpp  pickplace.py  posfinder.py
